# Slither

./: .clang-format  .gitignore  .markdownlint.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.cluster  CMakeLists.old  CMakeLists.txt  Doxyfile  Makefile  README.md  ReadMe.txt  build.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_actual_forest.py  test_fast_forest.py  test_modern_api.py  vcpkg.json
.github/workflows/: code-quality.yml  cpp-build.yml  docs-deploy.yml  python-build.yml  release.yml  security.yml
Neural_data/: download_googlenet.py  download_kitti.py  download_mnist.py
benchmarks/: CMakeLists.txt  benchmark_classification.cpp
cmake/: FindBoostNumPy.cmake  HunterGate.cmake  SlitherConfig.cmake.in
cmake/Hunter/: config.cmake
data/density estimation/: exp3.txt  exp4.txt  exp6.txt
data/density-estimation/: exp1.txt  exp7.txt
data/regression/: exp2.txt  exp3.txt  exp4.txt  exp5.txt  exp6.txt  exp8.txt  exp9.txt
data/sclf/: datagenerator.py  sampl.txt  sample_predict.txt  sample_test.txt  sample_train.txt  trainRfsvm.py
data/semi-supervised classification/: exp1.txt  exp3.txt  exp4.txt  exp5.txt  exp7.txt
demo/: ReadMe.txt  sherwood.sln
demo/data/density estimation/: exp2.txt  exp5.txt
demo/data/regression/: exp1.txt  exp10.txt  exp11.txt  exp7.txt
demo/data/sclf/: datareader.py  exp1_n2.txt  gendata.py  testRfsvm.py
demo/data/semi-supervised classification/: exp10.txt  exp11.txt  exp12.txt  exp2.txt  exp6.txt  exp8.txt  exp9.txt
demo/source/: Classification.cpp  Classification.h  ClassificationExample.cpp  ClassificationExample.h  CumulativeNormalDistribution.cpp  CumulativeNormalDistribution.h  DataPatchCollection.cpp  DataPatchCollection.h  DataPointCollection.cpp  DataPointCollection.h  DensityEstimation.cpp  DensityEstimation.h  DensityEstimationExample.cpp  DensityEstimationExample.h  FeatureResponseFunctions.cpp  FeatureResponseFunctions.h  FloydWarshall.cpp  FloydWarshall.h  Platform.cpp  Platform.h  PlotCanvas.cpp  PlotCanvas.h  Regression.cpp  Regression.h  RegressionExample.h  SemiSupervisedClassification.cpp  SemiSupervisedClassification.h  StatisticsAggregators.cpp  StatisticsAggregators.h  dibCodec.cpp  dibCodec.h  main.cpp  sherwood.vcxproj.filters  stdafx.cpp  stringUtilities.h
docs/: STYLE_GUIDE.md  index.md
docs/api/: cpp-modern.md  cpp.md  python.md
docs/development/: architecture.md  building.md  contributing.md
docs/examples/: modern-usage.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/user-guide/: cpp-library.md  forest-svm.md  overview.md  performance.md
examples/: basic_usage.py  forest_proof.py
include/slither/: Classification.h  CommandLineParser.h  DensityEstimation.h  DensityEstimationExample.h  FeatureResponseFunctions.h  FloydWarshall.h  Forest.h  ForestTrainer.h  Graphics.h  Interfaces.h  Node.h  Platform.h  ProgressStream.h  Random.h  Regression.h  Sherwood.h  StatisticsAggregators.h  stringUtilities.h
lib/: Forest.h  ForestTrainer.h  Interfaces.h  Node.h  ParallelForestTrainer.h  ProgressStream.h  Random.h  Sherwood.h  TrainingParameters.h  Tree.h
pyWrapper/: NumPyArrayData.h  Rfsvmdata.py  wrapper.cpp
python/slither/: __init__.py  _compat.py  base.py  classifier.py  exceptions.py
source/: Classification.cpp  Classification.h  ClassificationExample.cpp  ClassificationExample.h  CommandLineParser.cpp  CommandLineParser.h  CumulativeNormalDistribution.h  DataPointCollection.cpp  DataPointCollection.h  DensityEstimation.h  FeatureResponseFunctions.cpp  FeatureResponseFunctions.h  Graphics.h  ImageDataPointCollection.cpp  ImageDataPointCollection.h  OpenCVCompat.h  PlotCanvas.cpp  PlotCanvas.h  Regression.cpp  Regression.h  RegressionExample.h  SemiSupervisedClassification.cpp  SemiSupervisedClassification.h  StatisticsAggregators.cpp  StatisticsAggregators.h  dibCodec.cpp  dibCodec.h  main.cpp  sherwood.vcxproj
src/: CommandLineParser.cpp  CumulativeNormalDistribution.cpp  DensityEstimation.cpp  DensityEstimationExample.cpp  FeatureResponseFunctions.cpp  Platform.cpp  StatisticsAggregators.cpp  main.cpp
test/: test_datapointcollection.cpp  test_pyslither.py  test_with_mnistdata.py  test_wrapper.py
tests/: test_classifier.py  test_simple.py
